<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMyProfile">

    <ImageView
        android:id="@+id/imageViewDisplay"
        android:layout_width="149dp"
        android:layout_height="102dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imagedisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDisplay"
        tools:text="@string/Name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/studentId2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/studentId" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="81dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewDepartment2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="@string/Department" />

    <TextView
        android:id="@+id/fullnameId"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDisplay"
        tools:text="@string/fullname" />

    <TextView
        android:id="@+id/studentdisplayId"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/fullnameId"
        tools:text="@string/studentiddisplay" />

    <TextView
        android:id="@+id/departmentdisplayId"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/studentdisplayId"
        tools:text="@string/departmentdisplay" />

    <Button
        android:id="@+id/editbuttonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/buttondisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departmentdisplayId"
        tools:text="@string/buttondisplay" />
</android.support.constraint.ConstraintLayout>